# gsplat

./: README.md  build_fast.sh  pyproject.toml  setup.py
gsplat/: __init__.py  project_gaussians_2d.py  project_gaussians_2d_scale_rot.py  rasterize_sum.py  utils.py
gsplat/cuda/: __init__.py  _backend.py
gsplat/cuda/csrc/: backward.cu  backward.cuh  backward2d.cu  backward2d.cuh  bindings.cu  bindings.h  config.h  ext.cpp  forward.cu  forward.cuh  foward2d.cu
