[build-system]
# 构建所需依赖
requires = [
    "setuptools>=64",
    "wheel",
    "torch",            # 因为你用到了 torch.utils.cpp_extension
]
build-backend = "setuptools.build_meta"

[project]
name = "gsplat"
version = "0.1.3"
description = "Python package for differentiable rasterization of gaussians"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "jaxtyping",
    "rich>=12",
    "torch",
    "typing_extensions; python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]==22.3.0",
    "isort==5.10.1",
    "pylint==2.13.4",
    "pytest==7.1.2",
    "pytest-xdist==2.5.0",
    "typeguard>=2.13.3",
    "pyyaml",
    "build",
    "twine",
    "ninja",
]
